--- a/reporter/templates/reporter/index.html
+++ b/reporter/templates/reporter/index.html
@@ -12,6 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style type="text/css">
         #gis { width:80%; height:700px;}
     </style>
@@ -29,72 +30,41 @@
             </div>
         </div>
     </section>
-    <section class="section">
-        <div class="container">
-            <div class="columns">
-                <div class="column is-offset-4 is-4">
-                    <form method="POST">
-                        {% csrf_token %}
-                        <div class="field has-addons">
-                            <div class="control is-expanded">
-                                {{ form.name }}
-                            </div>
-                            <div class="select">
-                                <select name='city_name'>
-                                {% for weather_details in geodata %}
-                                    <option>{{weather_details.city}}</option>
-                                {% endfor %}
-                                </select>
-                            </div>
-                            <div class="control">
-                                <button type="submit" class="button is-info" >
-                                    Check Weather
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                    
-                </div>
-                <br>
-                
-            </div>
+    
             <div>
             {% leaflet_map "gis" %}
             </div>
-        </div>
-    </section>
-    <section class="section">
-        <div class="container">
-            <div class="columns">
-                <div class="column is-offset-4 is-4">
-                    {% for city_weather in weather_data %}
-                    <div class="box">
-                        <article class="media">
-                            <div class="media-left">
-                                <figure class="image is-50x50">
-                                    <img src="http://openweathermap.org/img/w/{{ city_weather.icon }}.png" alt="Image">
-                                </figure>
-                            </div>
-                            <div class="media-content">
-                                <div class="content">
-                                    <p>
-                                        <span class="title">{{ city_weather.city }}</span>
-                                        <br>
-                                        <span class="subtitle">{{ city_weather.temperature }}° F</span>
-                                        <br> {{ city_weather.description }}
-                                    </p>
-                                </div>
-                            </div>
-                        </article>
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <footer class="footer">
     </footer>
+{% comment %} <script type="text/javascript"> {% endcomment %}
+    {% comment %} function our_layers(map,options){
+        var points = new L.GeoJSON.AJAX("{% url 'data' %}",{
+            onEachFeature: function(feature,layer){
+                layer.bindPopup(feature.properties.name.toString());
+            }
 
+        });
+        points.addTo(map);
+        
+    } {% endcomment %}
+
+
+    {% leaflet_map "main" callback="main_map_init" %}
+
+    <script type="text/javascript">
+        function main_map_init (map, options) {
+            var dataurl = '{% url "data" %}';
+            // Download GeoJSON via Ajax
+            $.getJSON(dataurl, function (data) {
+                // Add GeoJSON layer
+                L.geoJson(data).addTo(map);
+            });
+        }
+
+</script>
+
+{% leaflet_map "gis" callback="window.our_layers" %}
 </body>
 
 </html>
